--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "schema:download": "npx apollo service:download --endpoint=https://anilist.co/graphiql .src/app/graphql/graphql-schema.json"
+    "schema:download": "npx apollo service:download --endpoint=https://anilist.co/graphql ./src/app/graphql/graphql-schema.json"
   },
   "eslintConfig": {
     "extends": "react-app"
